# cpp-exercise

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  cpp-exercise.code-workspace  cpp-exercise.cppcheck  read_wal.cpp
data_structure/: CMakeLists.txt
include/: catch2.ixx  catch2_macro.h  spdlog.ixx
module/: CMakeLists.txt  boost.scope.ixx  catch2.ixx  catch2.session.ixx  dylib.ixx  spdlog.ixx
module/boost.core/: CMakeLists.txt  boost.core.ignore_unused.ixx  boost.core.ixx
module/boost.intrusive/: CMakeLists.txt  boost.intrusive.detail.ixx  boost.intrusive.ixx  boost.intrusive.link_mode.ixx
module/boost.scope/: CMakeLists.txt  boost.scope.ixx
module/boost.scope/boost.scope/: defer.hpp  macro.h
module/catch2/: CMakeLists.txt  catch2.base.ixx  catch2.compat.ixx  catch2.ixx  catch2.modern.ixx
module/catch2/catch2/: catch_test_macros.hpp  macro.h
module/compat/: CMakeLists.txt
module/compat/compat_static_lib/: CMakeLists.txt
module/compat/compat_static_lib/src/: static_lib.cpp  static_lib.h  static_lib.hpp  static_lib.ixx  static_lib_decl.hpp  static_lib_global.hpp  static_lib_impl.hpp
module/compat/src/: global_module.hpp  main.cpp  main.hpp  main.ixx
module/dylib/: CMakeLists.txt
module/include/module/boost/scope/: macro.h
module/include/module/catch2/: macro.h
module/spdlog/: CMakeLists.txt
module/spdlog/spdlog/: compat.h
module/src/: a.cpp  a.cppm  a.ixx  catch2_compat_example.cpp  catch2_compat_example.ixx  catch2_module_example.cpp  catch2_module_example.ixx  main.cpp  main.ixx  single_main.ixx
other/: CMakeLists.txt
other/src/: boost_example.cpp  doctest_example.cpp  hello_imgui_example.cpp  intrusive_container.cpp
shared_library/: CMakeLists.txt  shared_lib_test.py
shared_library/include/: shared_lib.h
shared_library/src/: shared_lib.cpp  shared_lib_test.cpp
src/: catch2_example.cpp  catch2_example.ixx  hello_imgui_example.cpp  list_example.cpp  main.cpp  main.ixx  main_macro.h  proxy_example.cpp  tree_example.cpp  uv_client.cpp  uv_server.cpp
use_library/: CMakeLists.txt
use_library/include/: static_lib.h
use_library/src/: shared_lib.cpp  shared_lib_test.cpp  shared_lib_test.ixx  static_lib.cpp
ut/: CMakeLists.txt
ut/include/boost/: ut.ixx
ut/src/: a.h  main.cpp
uv/: CMakeLists.txt
uv/src/: uv_client.cpp  uv_server.cpp  uv_server_more.cpp
